--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "Sebagai bahan bacaan, Bab 1 dari buku *Introduction to seismology*, karangan Markus Bath, **Scope and History of Seismology**  dapat digunakan. Jika diperlukan, gunakan Google Translator untuk menerjemahkan ke dalam bahasa Indonesia, meskipun tidak sempurna. \n",
     "\n",
-    "![chapter_1](translate_markus.png \"Logo Title Text 1\")\n"
+    "![chapter_1](Gambar\translate_markus.png \"Logo Title Text 1\")\n"
    ]
   },
   {
