Rename the file

--- a/Sejarah_Wawasan_Seismologi.ipynb
+++ b/Sejarah_Wawasan_Seismologi.ipynb
@@ -127,7 +127,9 @@
     "\n",
     "Meskipun gempabumi telah dialami sejak dahulu, upaya untuk mengkaji gempabumi secara ilmiah mulai dirintis sejak pertengahan abad ke 18. Salah satu gempa yang menjadi tonggak penelitian seismologi adalah [Gempa dan Tsunami tanggal 1 November 1755](https://en.wikipedia.org/wiki/1755_Lisbon_earthquake) yang menghancurkan kota Lisbon, Portugal. Kemudian, gempa di Calabria, Italia tahun 1783 diteliti oleh sebuah komisi gempa yang dibentuk oleh pemerintah. Gempa di Cutch India, 1819 adalah gempa dengan fenomena patahan yang pertama teramati. [Gempa di Naples 1857](https://en.wikipedia.org/wiki/1857_Basilicata_earthquake) adalah gempa pertama yang diteliti secara geofisika.\n",
     "\n",
-    "Pengamatan gempa jaman dahulu, pada saat belum ada instrumen perekam gempa (seismometer), dilakukan secara kualitatif, yaitu melihat efek sekunder, yaitu dampak yang ditimbulkan pada bangunan, atau pada topografi. Saat itu, upaya untuk melihat efek primernya misalnya mengenai patahan yang terjadi belum banyak diamati."
+    "Pengamatan gempa jaman dahulu, pada saat belum ada instrumen perekam gempa (seismometer), dilakukan secara kualitatif, yaitu melihat efek sekunder, yaitu dampak yang ditimbulkan pada bangunan, atau pada topografi. Saat itu, upaya untuk melihat efek primernya misalnya mengenai patahan yang terjadi belum banyak diamati.Setelah itu semakin banyak pengamatan di lapangan yang mengaitkan kejadian gempa dengan aktifitas sesar-sesar, misalnya yang dilaporkan oleh para pengamat setelah gempa Owari di Jepang tahun 1891 dan gempa San Fransisco 1908. Kita tentu ingat gambar yang sangat terkenal mengenai pagar pembatas kebun di Amerika yang bergeser akibat sesar ini.\n",
+    "\n",
+    "![pagar_geser](https://insider.si.edu/wp-content/uploads/2011/09/Figure-4.jpg)"
    ]
   },
   {
