--- a/Sejarah_Wawasan_Seismologi.ipynb
+++ b/Sejarah_Wawasan_Seismologi.ipynb
@@ -129,7 +129,9 @@
     "\n",
     "Pengamatan gempa jaman dahulu, pada saat belum ada instrumen perekam gempa (seismometer), dilakukan secara kualitatif, yaitu melihat efek sekunder, yaitu dampak yang ditimbulkan pada bangunan, atau pada topografi. Saat itu, upaya untuk melihat efek primernya misalnya mengenai patahan yang terjadi belum banyak diamati.Setelah itu semakin banyak pengamatan di lapangan yang mengaitkan kejadian gempa dengan aktifitas sesar-sesar, misalnya yang dilaporkan oleh para pengamat setelah gempa Owari di Jepang tahun 1891 dan gempa San Fransisco 1908. Kita tentu ingat gambar yang sangat terkenal mengenai pagar pembatas kebun di Amerika yang bergeser akibat sesar ini.\n",
     "\n",
-    "![pagar_geser](https://insider.si.edu/wp-content/uploads/2011/09/Figure-4.jpg)"
+    "![pagar_geser](https://insider.si.edu/wp-content/uploads/2011/09/Figure-4.jpg)\n",
+    "\n",
+    "Dari peristiwa gempa di San Fransisco inilah kemudian lahir sebuah teori sumber gempa yang dikenal dengan teori loncatan "
    ]
   },
   {
