--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -76,7 +76,8 @@
     "\n",
     "![minakami](Gambar/minakami.png)\n",
     "\n",
-    "- Volcano Seismology by Kawakatsu and Yamamoto ([pdf](http://gachon.eri.u-tokyo.ac.jp/~hitosi/Projects/Aso2003-2006/Report2_kawakatsu.pdf))"
+    "- Volcano Seismology by Kawakatsu and Yamamoto ([pdf](http://gachon.eri.u-tokyo.ac.jp/~hitosi/Projects/Aso2003-2006/Report2_kawakatsu.pdf))\n",
+    "- Volcano Seismology by Joachim Wassermann ([pdf](http://gfzpublic.gfz-potsdam.de/pubman/item/escidoc:4013:4/component/escidoc:4014/Chapter_13_rev1.pdf))"
    ]
   },
   {
