--- a/Prinsip_Seismometer.ipynb
+++ b/Prinsip_Seismometer.ipynb
@@ -28,7 +28,34 @@
     "\n",
     "Massa yang digantung dengan tali akan cenderung diam kalau penggantungnya bergetar secara horisontal bersama dengan tanah, karena massa mempunyai kelembaman. Dengan demikian sebuah pena yang terpasang pada massa tersebut akan dapat menggores kertas yang ikut bergetar bersama tanah. Kalau secara bersamaan kertas juga bergerak kesamping maka jejak gerakan tanah akan terekam pada kertas tersebut. Gambar 2.1.a.  akan lebih menjelaskan prinsip kerja seismometer untuk komponen horisontal ini.\n",
     "\n",
+    "![pendulum](Gambar/pendulum.png)\n",
+    "\n",
     "Hal serupa terjadi kalau massa digantung dengan pegas, yaitu bila penggantung bergetar secara vertikal bersama dengan tanah, maka massa juga akan cenderung diam, dan pena yang terpasang padanya juga dapat membuat jejak getaran tanah pada kertas yang juga bergetar bersama tanah (Gambar 2.1.b.). Maka sistem massa yang digantung dengan pegas, pada prinsipnya dapat dipakai untuk seismometer komponen vertikal. Dengan demikian prinsip dasar seismometer adalah ayunan massa atau pendulum (dapat dengan tali atau pegas)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Secara prinsip, semua alat yang memakai prinsip pendulum seperti pada gambar diatas adalah Seismometer. Tentu saja ini penggambaran yang sangat dasar, karena ada beberapa masalah yang timbul dalam kasus ini, yaitu:\n",
+    "1. Damping. Pendulum diatas tidak ada damping.\n",
+    "2. Periode. Persamaan perioda pemdulum $T \\approx 2 \\pi \\sqrt{\\frac{l}{g}} $ maka seismometer dengan panjang tali pendek menjadi short period seismometer.\n",
+    "3. Perbesaran. Getaran yang direkam dari pendulum diatas tidak ada perbesaran, sehingga tidak bisa dipakai mengamati gempa yang biasanya amplitudonya kecil."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Secara umum, gerakan partikel pada benda padat dibagi menjadi 3 macam, (1) Translasi (2) Rotasi dan (3) Deformasi (Strain). Umumnya seismometer yang kita kenal adalah menera gerak translasi saja. Padahal, dari pengamatan setelah kejadian gempa, banyak fenemena perpindahan benda yang sifatnya rotasional.\n",
+    "\n",
+    "![chimrot](https://pbs.twimg.com/media/DgZd8DWVAAAwx1x.jpg)\n",
+    "### Seismometer translasional\n",
+    "![seismo](https://www.passcal.nmt.edu/sites/default/files/webfm/passcal/webb/RER-17-1%20640x480.jpg)\n",
+    "### Rotational Sensors\n",
+    "![ringlaser](http://hpwren.ucsd.edu/news/images/050203-ring_laser.jpg)\n",
+    "\n",
+    "![eentec](http://www.eentec.com/Pictures/r1.jpg)"
    ]
   },
   {
