--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -144,6 +144,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cobalah buat analisis sederhana dari ketiga gambar diatas ..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
