--- a/Prinsip_Seismometer.ipynb
+++ b/Prinsip_Seismometer.ipynb
@@ -141,15 +141,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lantas, bagaimanakah hubungan antara seismogram dan gerakan tanah di permukaan bumi (*ground motions*)? Mari kita amati berdasarkan gambar dibawah ini:\n",
+    "![](Gambar/seismodel.png)\n",
+    "\n",
+    "Sebuah seismometer bebasis pegas, terdiri dari masa, pegas dan hambatan untuk redaman/damping. Secara fisika, ada 2 kerangka acuan yang bekerja disitu, yaitu kerangka acuan seismometer dan kerangka acuan bumi. Masa beban digantung dengan pegas pada kerangka acuan seismometer, sementara gerakan tanahnya relatif terhadap kerangka acuan bumi. Pada saat bumi bergerak, maka gerakan masa/pegas bergerak relatif terhadap bumi dan kerangka acuan seismometernya .. jadi bingung tidak? he he he mbulet ya.  \n",
+    "\n",
+    "Untuk itu, gerakan masa relatif terhadap kerangka acuan yang diam, dapat dijelaskan dengan gerakan posisi masa pada kerangka acuan seismometer, $x_r(t), \\dot{x_r}(t), \\ddot{x_r}(t)$. Posisi masa relatif terhadap bumi dinyatakan dalam $u_m(t)$. Gerakan masa nantinya dikontrol oleh jumlahan gaya yang bekerja pada sistem tersebut, yaitu:\n",
+    "\n",
+    "- Gaya inersia dari masa relatif terhadap bumi, dirumuskan sebagai\n",
+    "\n",
+    "\n",
+    "$f_i = -m \\ddot{u}_m(t) $\n",
+    "\n",
+    "- Gaya pegas $f_{sp}$\n",
+    "\n",
+    "$f_{sp} = -k x_r(t) $\n",
+    "\n",
+    "dengan $k$ adalah konstanta pegas, dan $x_r = x_m - x_0$\n",
+    "\n",
+    "- Gaya redaman, atau gaya gesekan $f_f$ yang sebanding dengan kecepatan $\\dot{x}_m(t)$\n",
+    "\n",
+    "$f_f = -D \\dot{x}_m(t) $\n",
+    "\n",
+    "dengan $D$ adalah gaya gesekan.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pada keadaan setimbang resultan gaya yang bekerja dapat dituliskan\n",
+    "\n",
+    "$-m \\ddot{u}_m(t)-D\\dot{x}_m(t)-kx_r(t)=0$\n",
+    "\n",
+    "Melihat gambar diatas (Fig 4.1) dapat dilihat bahwa $u_m(t)=u_g(t) + x_m(t)$, jadi persamaan diatas dapat dituliskan kembali\n",
+    "\n",
+    "$m \\ddot{x}_r(t)+D\\dot{x}_r(t)+kx_r(t)=-m\\ddot{u}_g(t)$\n",
+    "\n",
+    "Jika kita bagi dengan $m$, maka\n",
+    "$\\ddot{x}_r(t)+\\frac{D}{m}\\dot{x}_r(t)+\\frac{k}{m}x_r(t)=-\\ddot{u}_g(t)$ atau disederhanakan menjadi\n",
+    "\n",
+    "$\\ddot{x}_r(t)+2 \\varepsilon \\dot{x}_r(t)+\\omega_0^2x_r(t)=-\\ddot{u}_g(t)$\n",
+    "\n",
+    "dengan $\\omega_0^2 = \\frac{k}{m}$, $2\\varepsilon = \\frac{D}{m}=2 h \\omega_0 . h = \\varepsilon / \\omega_0$ adalah konstanta redaman seismometer.\n",
+    "\n",
+    "Jika dikomputasikan dapat dilihat hasil sebagai berikut ..\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](Gambar/sismo1.png)\n",
+    "\n",
+    "![](Gambar/sismo2.png)\n",
+    "\n",
+    "![](Gambar/sismo3.png)\n",
+    "\n",
+    "Cobalah buat analisis sederhana dari ketiga gambar diatas ..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "Lantas, bagaimanakah hubungan antara seismogram dan gerakan tanah di permukaan bumi (*ground motions*)? Mari kita amati berdasarkan gambar dibawah ini:\n",
-    "![](Gambar/seismodel.png)\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
