--- a/Gel_Seism.ipynb
+++ b/Gel_Seism.ipynb
@@ -146,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Untuk bumi bulat, Hukum Snell menjadi $\\frac{r \\sin i}{v}$"
+    "Untuk bumi bulat, Hukum Snell menjadi $\\frac{r \\sin i}{v}$=konstan sepanjang penjalaran"
    ]
   },
   {
