--- a/Gel_Seism.ipynb
+++ b/Gel_Seism.ipynb
@@ -150,6 +150,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](Gambar/psv.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
