--- a/Struktur.ipynb
+++ b/Struktur.ipynb
@@ -6,17 +6,36 @@
    "source": [
     "# Struktur Bumi dari Seismologi\n",
     "\n",
-    "Perhatikan informasi di bawah ini, kemudian fikirkan bagaimana solusinya:\n",
+    "Salah satu metode geofisika yang dapat mengakses bagian dalam bumi, hingga ke dalam inti bumi adalah Seismologi. Dengan seismologi, saat ini kita dapat memperoleh gambaran bagian dalam bumi, tanpa harus menembus ke dalam bumi untuk melihat secara langsung.\n",
     "\n",
-    "The 2006 Yogyakarta earthquake of magnitude Mw=6,4, which destroyed many buildings in the Bantul and Yogyakarta area, occured at 05:54:00.00 local time or 22:54:00.00 UTC. The earthquake was casused by a sudden displacement of the Opak fault segment (See Figure2). The hypocenter was located 15 km below the surface\n",
-    "\n",
-    "![](Gambar/jogi.png)"
+    "![](http://acamacho81.weebly.com/uploads/2/3/7/6/23762698/9594915_orig.jpg)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Saat ini dengan semakin rapatnya jaringan GPS global, model bumi secara konvektif telah banyak disimulasikan. Model ini biasa dipakai untuk menjelaskan bagaimana material dari mantel naik menuju kerak bumi.\n",
+    "\n",
+    "![](https://i.ytimg.com/vi/iRXWhOscx-E/maxresdefault.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Secara sederhana, dengan menggunakan informasi dari rekaman gempabumi, kita dapat menjawab bagaimana struktur di dalam bumi berdasarkan parameter kecepatan perambatan gelombang di dalam bumi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Perhatikan informasi di bawah ini, kemudian fikirkan bagaimana solusinya:\n",
+    "\n",
+    "The 2006 Yogyakarta earthquake of magnitude Mw=6,4, which destroyed many buildings in the Bantul and Yogyakarta area, occured at 05:54:00.00 local time or 22:54:00.00 UTC. The earthquake was casused by a sudden displacement of the Opak fault segment (See Figure2). The hypocenter was located 15 km below the surface\n",
+    "\n",
+    "![](Gambar/jogi.png)\n",
     "The seismic wave that propagates on the earth crust can be recorded using seismometer. The diagram from is seismometer is called the seismogram(Figure 2 and 3 , lower graph). The seismograms represent the vertical ground velocity motion as a function of time recorded by the seismic station at Gamping Yogyakarta (YOGI) (Fig2) and Denpasar, Bali (DNP) (Fig3). In general, seismic wave consists of three wave types, the logitudinal or primary (P-wave), the transversal or secondary (S-wave), and the surface wave. The P-wave and S-wave travel in the subsurface while the surface wave travels along the earth's surface. Seismic waves traveling through subsurfaces to the stations can be divided into those that propagate in a straight line, those that are reflected by a layer's boundary, and those that are refracted into the next layer. The longitudinal wave has the highest velocity, while the surface wave has the lowest velocity, about 60% of the P-wave."
    ]
   },
