--- a/Prinsip_Seismometer.ipynb
+++ b/Prinsip_Seismometer.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Prinsip Kerja Seismometer\n",
     "\n",
-    "Akan dijelaskan secara tuntas dan jelas (semoga) bagaimana getaran tanah dapat dimonitor dengan alat yang peka terhadap getaran (sensor getaran/seismometer). Beberapa simulasi sederhana akan ditampilkan guna memberikan gambaran yang lebih visual dan jelas mengenai alat ini."
+    "Akan dijelaskan secara tuntas dan jelas (semoga) bagaimana gerakan tanah dapat dimonitor dengan alat yang peka terhadap getaran (sensor gerak/seismometer). Beberapa simulasi sederhana akan ditampilkan guna memberikan gambaran yang lebih visual dan jelas mengenai alat ini."
    ]
   },
   {
